2.vpc.tf
resource "aws_vpc" "default" {
  cidr_block           = var.vpc_cidr
  enable_dns_hostnames = true
  tags = {
    Name        = var.vpc_name
    Owner       = "Sreeharsha Veerapalli"
    environment = var.environment
  }
}


resource "aws_internet_gateway" "default" {
    vpc_id = aws_vpc.default.id  #implicit Dependency
	tags = {
        Name = "${var.vpc_name}-IGW"
    }
}
